style.css
body {
  font-family: "Source Sans Pro", sans-serif;
  background-color: #f3f3f3;
}
footer {
  bottom: 0;
  left: 0;
  background-color: #f3f3f3;
  height: 50px;
  width: 100%;
  margin-top: 5px;
  margin: auto;
  border-top: #141414 5px solid;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}
footer i {
  font-size: 1.8em;
}
footer i:hover {
  color: white;
  background-color: #141414;
}
#navbar {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 50px;
  margin: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #f3f3f3;
}
#navbar ul {
  display: flex;
  padding: 0;
}
#navbar li,
a {
  color: black;
  font-size: large;
  padding: 5px;
  list-style: none;
  text-decoration: none;
  box-sizing: border-box;
}

#navbar a:visited {
  text-decoration: none;
}

#navbar li:hover {
  border-bottom: orangered 3px inset;
  margin-bottom: -3px;
}
#welcome-section {
  background-color: #ff7700;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cpolygon fill='%23c50101' points='957 450 539 900 1396 900'/%3E%3Cpolygon fill='%23850707' points='957 450 872.9 900 1396 900'/%3E%3Cpolygon fill='%23c6022d' points='-60 900 398 662 816 900'/%3E%3Cpolygon fill='%23920824' points='337 900 398 662 816 900'/%3E%3Cpolygon fill='%23c40f54' points='1203 546 1552 900 876 900'/%3E%3Cpolygon fill='%23891640' points='1203 546 1552 900 1162 900'/%3E%3Cpolygon fill='%23ad0763' points='641 695 886 900 367 900'/%3E%3Cpolygon fill='%23962663' points='587 900 641 695 886 900'/%3E%3Cpolygon fill='%23bd2197' points='1710 900 1401 632 1096 900'/%3E%3Cpolygon fill='%2389216e' points='1710 900 1401 632 1365 900'/%3E%3Cpolygon fill='%23a900a9' points='1210 900 971 687 725 900'/%3E%3Cpolygon fill='%237f1b7f' points='943 900 1210 900 971 687'/%3E%3C/svg%3E");
  background-attachment: fixed;
  background-repeat: no-repeat;
  color: #141414;
  margin-top: 50px;
  margin-bottom: 0;
  height: 100vh;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#welcome-section h1 {
  font-size: 4rem;
  text-align: center;
  font-family: "Lato", sans-serif;
  color: white;
  text-shadow: 0 0 10px black;
}
#socialPages {
  background-color: rgba(139, 0, 0, 0.5);
  width: 50%;
  margin: 0;
  padding: 15px;
  height: 100px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  border-radius: 15px;
  font-size: 2.3rem;
}
#socialPages:hover {
  background-color: rgba(139, 0, 0);
  cursor: pointer;
}
#socialPages p,
#socialPages i {
  color: #f3f3f3;
  margin: 0;
  font-size: 2.3rem;
  text-align: center;
}
#socialPages a {
  text-decoration: none;
  display: inline;
  color: #f3f3f3;
}

#projectsOnly {
  display: grid;
  justify-content: center;
  height: 150vh;
  width: 100%;
  background-image: url("https://firebasestorage.googleapis.com/v0/b/mi-portafolio-alfaruga.appspot.com/o/background_projects.jpg?alt=media&token=2e6097df-cb70-46c6-b056-75fcaa59adb8");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  align-items: center;
  grid-template-columns: 100%;
  grid-template-rows: 25% 25% 25% 25%;
}
#titulo-projects {
  height: 200px;
  background-color: #010a25;
  text-align: center;
  margin: 0;
  padding-top: 100px;
}
#titulo-projects i {
  font-size: 2em;
  margin: 0;
  padding: 0;
  color: white;
}
#calc {
  background-image: url("https://firebasestorage.googleapis.com/v0/b/mi-portafolio-alfaruga.appspot.com/o/Calculator.png?alt=media&token=4883ae1a-3102-4e69-ac93-91d4967e6ff8");
}
#prod {
  background-image: url("https://firebasestorage.googleapis.com/v0/b/mi-portafolio-alfaruga.appspot.com/o/Product%20landing%20page.png?alt=media&token=5f0585b8-9bd0-45ad-9ec1-a93e6ab7a10b");
}
#lib {
  background-image: url("https://firebasestorage.googleapis.com/v0/b/mi-portafolio-alfaruga.appspot.com/o/Library.png?alt=media&token=9909266a-f0bb-4700-a6c5-f5f880cd87ab");
}
#tictac {
  background-image: url("https://firebasestorage.googleapis.com/v0/b/mi-portafolio-alfaruga.appspot.com/o/Tic%20tac%20toe.png?alt=media&token=d3ffa322-59cf-4ac4-907b-67841fe21cb2");
}

.project-tile {
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center;
  text-align: center;
  width: 80%;
  height: 200px;
  border-radius: 15px;
  box-sizing: border-box;
  justify-self: center;
}

.project-container {
  display: grid;
  grid-template-columns: 50% 50%;
  grid-template-rows: 100%;
  background-color: rgba(0, 0, 0, 0.8);
  height: 100%;
  width: 100%;
  justify-content: space-between;
  align-content: center;
}

.project-container ul {
  color: white;
  font-size: 1.5em;
  list-style-type: none;
}
.project-container li {
  padding: 5px, 0;
}

.project-links {
  justify-self: center;
  align-self: center;
  display: flex;
  font-size: 1.2em;
  color: white;
  width: 100%;
  height: 100%;
  flex-direction: column;
  justify-content: space-between;
}
.project-links a,
.project-links p {
  color: white;
  background: linear-gradient(to right, black 10%, blue 100%);

  background-size: 200%;
}
.project-links a:hover {
  background-position-x: 50%;
  margin: -3px;
  border: 3px solid white;
}
#contact {
  width: 100%;
  height: 100vh;
  display: flex;
  text-align: center;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
#contact h1 {
  font-family: "Lato", sans-serif;
  font-size: 3em;
}
#correo {
  padding: 15px;
  border: solid 3px black;
  width: fit-content;
  margin: auto;
  transition: 0.5s;
  background-size: 200% auto;
  background-image: linear-gradient(
    to right,
    rgba(255, 255, 255, 0.877),
    rgb(48, 1, 255)
  );
}
#correo:hover {
  background-position: right center;
}
#contactName {
  color: blue;
  text-shadow: 0 0 3px #141414;
}

@media (max-width: 650px) {
  #welcome-section h1 {
    font-size: 2.5em;
  }
  #welcome-section p,
  i {
    font-size: 1.3em;
  }
  #projectsOnly {
    display: grid;
    height: 200vh;
    justify-content: center;
    align-items: center;
    grid-template-columns: 80%;
    grid-template-rows: 25%;
  }
  .project-tile {
    width: 90%;
  }
  .project-container {
    grid-template-areas:
      "image"
      "text";
    grid-template-columns: 100%;
    grid-template-rows: 50% 50%;
    justify-content: center;
    align-items: center;
  }
  .project-container ul {
    grid-area: text;
    font-size: 0.8em;
    padding: 0;
    margin: 0;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: flex-end;
  }
  .project-tile {
    grid-area: image;
  }
}

